# NNTK

./: .gitignore  .gitmodules  CMakeLists.txt  premake5.lua
NN-Toolkit/: premake5.lua
NN-Toolkit/include/NN/: Error.hpp  Functions.hpp  Matrix.hpp  Toolkit.hpp
NN-Toolkit/include/NN/Layers/: AveragePooling2D.hpp  Base.hpp  Conv2D.hpp  Dense.hpp  Flatten.hpp  MaxPooling2D.hpp
NN-Toolkit/src/: Functions.cpp
NN-Toolkit/src/Layers/: AveragePooling2D.cpp  Conv2D.cpp  Dense.cpp  Flatten.cpp  MaxPooling2D.cpp
cmake/: Macros.cmake
examples/: CMakeLists.txt  Matrix.hpp  arr_mat_compare.cpp  conv_test.cpp  cuda.cpp  dense_test.cpp  funcs.cpp  layers.cpp  main.cpp  performance.cpp  typecheck.cpp
include/NN/: ArrayBaseCopy.hpp  Error.hpp  Funcs.hpp  Functions.hpp  Matrix.hpp  Toolkit.hpp
include/NN/Core/: Base.hpp  Device.hpp  Types.hpp
include/NN/Core/CPU/: Memory.hpp
include/NN/Core/GPU/: Memory.hpp
include/NN/Core/GPU/CUDA/: Memory.hpp
include/NN/Functions/: Activation.hpp  Funcs.hpp  Loss.hpp
include/NN/Layers/: AveragePooling2D.hpp  Base.hpp  Conv2D.hpp  Dense.hpp  Flatten.hpp  MaxPooling2D.hpp
include/NN/MX/: Array.hpp  ArrayFuncs.hpp  ArrayIterator.hpp  Iterator.hpp  funcs.cpp  main  main.cpp  save_test.mxa
include/NN/MX/Array/: Array.hpp  Creation.hpp  Functions.hpp
include/NN/MX/Array/GPU/: ArithmeticOperations.hpp
include/NN/MX/CPU/: ArithmeticOperations.hpp
include/NN/MX/GPU/: ArithmeticOperations.hpp
include/NN/MX/GPU/CUDA/: ArithmeticOperations.cu
include/NN/Models/: Sequential.hpp
include/NNTK/: Toolkit.hpp
include/NNTK/Core/: Base.hpp  Device.hpp  Error.hpp  Memory.hpp  Types.hpp
include/NNTK/Core/CPU/: Memory.hpp
include/NNTK/Core/GPU/: Memory.hpp
include/NNTK/Core/GPU/CUDA/: Memory.hpp
include/NNTK/Functions/: Activation.hpp  Loss.hpp
include/NNTK/Layers/: AveragePooling2D.hpp  Base.hpp  Conv2D.hpp  Dense.hpp  Flatten.hpp  MaxPooling2D.hpp
include/NNTK/MX/: Array.hpp
include/NNTK/MX/Array/: ArithmeticOperations.hpp  Array.tpp  Iterator.hpp  Predefinition.hpp
include/NNTK/MX/Array/GPU/: ArithmeticOperations.hpp
include/NNTK/MX/CPU/: ArithmeticOperations.hpp
include/NNTK/MX/GPU/: ArithmeticOperations.hpp
include/NNTK/Models/: Sequential.hpp
scripts/: Linux-GenMakefiles.sh  Windows-GenSolution.bat
src/: CMakeLists.txt  Error.cpp  Functions.cpp
src/Core/: Base.cpp  Device.cpp  Memory.cpp
src/Core/GPU/: Memory.cpp
src/Core/GPU/CUDA/: Memory.cpp  Memory.cu
src/Functions/: Activation.cpp  Loss.cpp
src/Layers/: AveragePooling2D.cpp  Base.cpp  Conv2D.cpp  Dense.cpp  Flatten.cpp  MaxPooling2D.cpp
src/Models/: Sequential.cpp
test/: CMakeLists.txt
test/MX/Array/: Operations.cpp
tests/: Array.cpp  AveragePooling2D.cpp  CNN.cpp  Conv2D.cpp  ErrorHandling.cpp  Flatten.cpp  Functions.cpp  Matrix.cpp  MaxPooling2D.cpp  MultilayerPerceptron.cpp  Perceptron.cpp  premake5.lua
tests/files/: AveragePooling2D.layer  CNN.model  CNN_X.mx  Filter.mx  Matrix.mx  MaxPooling2D.layer
(+7 files in other folders)
